--- a/.config/mako/config
+++ b/.config/mako/config
@@ -1,30 +1,52 @@
-font="Lucida Grande 10"
 
-#background-color=#303643
-#text-color=#f7f8f9
-#border-size=0
-#border-radius=#12px
-progress-color=#fa5aa4
+max-history=100
 sort=-time
-layer=overlay
-background-color=#383f4e
-text-color=#f7f8f9
-border-size=0
-border-radius=12
-max-icon-size=64
+
+on-button-left=dismiss
+on-button-middle=none
+on-button-right=dismiss-all
+on-touch=dismiss
+on-notify=exec mpv /usr/share/sounds/freedesktop/stereo/message.oga
+
+font=JetBrains Mono 10
+width=300
+height=100
+margin=20
+padding=15
+border-size=2
+border-radius=6
+icons=1
+max-icon-size=48
+icon-location=left
+markup=1
+actions=1
+history=1
+text-alignment=left
 default-timeout=5000
-ignore-timeout=1
+ignore-timeout=0
+max-visible=5
+layer=overlay
+anchor=bottom-right
+
+background-color=#111218
+text-color=#7E8191
 
 [urgency=low]
-#border-color=#cccccc
+border-color=#7E8191
+background-color=#111218
+text-color=#7E8191
 
 [urgency=normal]
-#border-color=#d08770
+border-color=#7E8191
+background-color=#111218
+text-color=#7E8191
+default-timeout=10000
+ignore-timeout=1
 
 [urgency=high]
-#border-color=#bf616a
+font=Sauce Code Pro 16
+border-color=#7E8191
+background-color=#111218
+text-color=#7E8191
 default-timeout=0
-
-[category=mpd]
-default-timeout=2000
-group-by=category
+ignore-timeout=1
