--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -12,7 +12,7 @@ exec-once = ~/.scripts/wal.sh # WALLPAPER
 exec-once = wlsunset -S 9:00 -s 9:00 -t 5000 # NIGHT LIGHT ON
 exec-once = ~/.local/bin/xdg-desktop-portal-hyprland # KILLS ALL DESKTOP PORTAL AND START HYPRLAND DESKTOP PORTAL
 exec-once = wl-paste --watch cliphist store # CLIPBOARD 
-
+exec-once = mako
 
 
 
