--- a/.config/tofi/config
+++ b/.config/tofi/config
@@ -1,7 +1,6 @@
-
 hide-cursor=true
 corner-radius= 15
-width = 20%
+#width = 20%
 height = 20%
 border-width = 0
 border- = 0
@@ -10,6 +9,7 @@ padding = 2%
 result-spacing = 5
 num-results = 5
 prompt-text =󰣇 
+prompt-padding= 5
 background-color = 
 text-color= #878999
 prompt-color= #9699A7
