--- a/.config/tofi/config
+++ b/.config/tofi/config
@@ -1,6 +1,6 @@
 hide-cursor=true
 corner-radius= 15
-#width = 20%
+width = 20%
 height = 20%
 border-width = 0
 border- = 0
@@ -11,7 +11,7 @@ num-results = 5
 prompt-text =󰣇 
 prompt-padding= 5
 background-color = 
-text-color= #878999
-prompt-color= #9699A7
-input-color= #A9ABB7
-selection-color= #B9BAC5
+text-color= #AF8B6E
+prompt-color= #CF9D71
+input-color= #DBB276
+selection-color= #EBC07C
