--- a/.config/mako/config
+++ b/.config/mako/config
@@ -28,25 +28,25 @@ max-visible=5
 layer=overlay
 anchor=bottom-right
 
-background-color=#111218
-text-color=#7E8191
+background-color=#0f1618
+text-color=#6B9A74
 
 [urgency=low]
-border-color=#7E8191
-background-color=#111218
-text-color=#7E8191
+border-color=#6B9A74
+background-color=#0f1618
+text-color=#6B9A74
 
 [urgency=normal]
-border-color=#7E8191
-background-color=#111218
-text-color=#7E8191
+border-color=#6B9A74
+background-color=#0f1618
+text-color=#6B9A74
 default-timeout=10000
 ignore-timeout=1
 
 [urgency=high]
 font=Sauce Code Pro 16
-border-color=#7E8191
-background-color=#111218
-text-color=#7E8191
+border-color=#6B9A74
+background-color=#0f1618
+text-color=#6B9A74
 default-timeout=0
 ignore-timeout=1
