--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,10 +1,17 @@
 
-########################################################################################
+#     # #     # ######  ######  ######  ####### #######  #####  
+#     #  #   #  #     # #     # #     # #     #    #    #     # 
+#     #   # #   #     # #     # #     # #     #    #    #       
+#######    #    ######  ######  #     # #     #    #     #####  
+#     #    #    #       #   #   #     # #     #    #          # 
+#     #    #    #       #    #  #     # #     #    #    #     # 
+#     #    #    #       #     # ######  #######    #     #####  
 
-########################################################################################
 
 
-
+#+-+-+-+-+-+-+-+-+-+
+#|A|U|T|O|S|T|A|R|T|
+#+-+-+-+-+-+-+-+-+-+
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # ENV FOR XDPH
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # ENV FOR XDPH
 exec-once = waybar # STARTS BAR
@@ -17,10 +24,16 @@ exec-once = mako
 
 
 
-#MONITOR
-monitor=,preferred,auto,auto
+#+-+-+-+-+-+-+-+
+#|M|O|N|I|T|O|R|
+#+-+-+-+-+-+-+-+
+#monitor=,preferred,auto,auto
+monitor=DP-1,1920x1080@60,0x0,1
 
-#WINDOW RULES
+
++-+-+-+-+-+-+-+-+-+-+-+-+
+|W|I|N|D|O|W|-|R|U|L|E|S|
++-+-+-+-+-+-+-+-+-+-+-+-+
 windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
 
 # Set programs that you use
@@ -28,8 +41,11 @@ $terminal = foot
 $fileManager = thunar
 $browser = firefox
 
++-+-+-+-+-+-+-+-+
+|E|N|V|-|V|A|R|S|
++-+-+-+-+-+-+-+-+
 # Some default env vars.
-env = XCURSOR_SIZE,12
+env = XCURSOR_SIZE,11
 env = GDK_BACKEND=wayland
 env = QT_QPA_PLATFORM,wayland
 env = SDL_VIDEODRIVER,wayland
@@ -41,6 +57,9 @@ env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 env = QT_QPA_PLATFORM,wayland;xcb
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 
++-+-+-+-+-+
+|I|N|P|U|T|
++-+-+-+-+-+
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = us
@@ -57,6 +76,14 @@ input {
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
+device:epic-mouse-v1 {
+    sensitivity = -0.5
+}
+
+
++-+-+-+-+-+-+-+
+|G|E|N|E|R|A|L|
++-+-+-+-+-+-+-+
 
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
@@ -72,6 +99,11 @@ general {
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
 }
+
+
++-+-+-+-+-+-+-+-+-+-+-+
+|D|E|C|O|R|A|T|I|O|N|S|
++-+-+-+-+-+-+-+-+-+-+-+
 
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
@@ -90,6 +122,11 @@ decoration {
     col.shadow = rgba(1a1a1aee)
 }
 
+
++-+-+-+-+-+-+-+-+-+-+
+|A|N|I|M|A|T|I|O|N|S|
++-+-+-+-+-+-+-+-+-+-+
+
 animations {
     enabled = yes
 
@@ -105,6 +142,10 @@ animations {
     animation = workspaces, 1, 6, default
 }
 
++-+-+-+-+-+-+-+
+|L|A|Y|O|U|T|S|
++-+-+-+-+-+-+-+
+
 dwindle {
     # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
     pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
@@ -116,24 +157,27 @@ master {
     new_is_master = true
 }
 
+
++-+-+-+-+-+-+-+-+
+|G|E|S|T|U|R|E|S|
++-+-+-+-+-+-+-+-+
 gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     workspace_swipe = off
 }
-
++-+-+-+-+
+|M|I|S|C|
++-+-+-+-+
 misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    force_default_wallpaper = -1 # Set to 0 to disable the anime mascot wallpapers
-}
-
-
-device:epic-mouse-v1 {
-    sensitivity = -0.5
+    force_default_wallpaper = 0 # Set to 0 to disable the anime mascot wallpapers
 }
 
 
 
-
++-+-+-+-+-+-+-+-+-+-+-+-+
+|K|E|Y|-|B|I|N|D|I|N|G|S|
++-+-+-+-+-+-+-+-+-+-+-+-+
 #keybindings
 
 $mainMod = SUPER
@@ -192,8 +236,8 @@ bind = , xf86MonBrightnessDown, exec, $backlight --dec #FN+F7
 bind = , xf86MonBrightnessUp, exec, $backlight --inc #FN+F8
 
 # Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+bind = $mainMod, Z, togglespecialworkspace, magic
+bind = $mainMod SHIFT, Z, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
