--- a/.config/tofi/config
+++ b/.config/tofi/config
@@ -1,17 +1,18 @@
+terminal=foot
 hide-cursor=true
 corner-radius= 15
 width = 20%
 height = 20%
-border-width = 0
-border- = 0
+border-width = 2
 outline-width = 0
-padding = 2%
+padding = 20
 result-spacing = 5
 num-results = 5
 prompt-text =󰣇 
-prompt-padding= 5
+prompt-padding =15 
 background-color = 
-text-color= #AF8B6E
-prompt-color= #CF9D71
-input-color= #DBB276
-selection-color= #EBC07C
+text-color= #DF95A5
+prompt-color= #AB6A88
+input-color= #D06C95
+selection-color= #BD8A74
+border-color=#DF95A5
