--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -18,7 +18,7 @@
     // Modules configuration
    "wlr/taskbar": {
        "format": "{icon}",
-       "icon-size": 8,
+       "icon-size": 10,
        "tooltip-format": "{title}",
        "on-click": "activate",
        },
@@ -68,23 +68,23 @@
             "format": "{icon} {percent}%",
             "format-icons": ["", ""],
         },
-   //     "cpu": {
-   //         "format": " {usage}%",
-   //         "tooltip": false
-   //     },
-   //    "disk": {
-   //        "format": " {}%",
-   //         "tooltip-format": "{used} / {total} used"
-   //     },
-   //    "memory": {
-  //          "format": " {}%",
-  //          "tooltip-format": "{used:0.1f}G / {total:0.1f}G used"
-   //     },
-        "temperature": {
-            "critical-threshold": 80,
-            "format": "{icon} {temperatureC}°C",
-            "format-icons": ["", "", "", "", ""]
-        },
+//     "cpu": {
+//        "format": " {usage}%",
+//         "tooltip": false
+//     },
+//    "disk": {
+//        "format": " {}%",
+//         "tooltip-format": "{used} / {total} used"
+//     },
+//    "memory": {
+//          "format": " {}%",
+//          "tooltip-format": "{used:0.1f}G / {total:0.1f}G used"
+//     },
+//      "temperature": {
+//          "critical-threshold": 80,
+//          "format": "{icon} {temperatureC}°C",
+//          "format-icons": ["", "", "", "", ""]
+//      },
         "battery": {
           "states": {
             "good": 80,
