--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,14 +1,19 @@
-
-#     # #     # ######  ######  ######  ####### #######  #####  
-#     #  #   #  #     # #     # #     # #     #    #    #     # 
-#     #   # #   #     # #     # #     # #     #    #    #       
-#######    #    ######  ######  #     # #     #    #     #####  
-#     #    #    #       #   #   #     # #     #    #          # 
-#     #    #    #       #    #  #     # #     #    #    #     # 
-#     #    #    #       #     # ######  #######    #     #####  
-
-
-
+                                                                                
+# ██    ██ ███    ███ ██████▒   ██████▒   █████▒     ░████░   ████████   ▒████▒  
+# ██    ██ ░██▒  ▒██░ ███████▒  ███████▓  ███████    ██████   ████████  ▒██████  
+# ██    ██  ███  ███  ██   ▒██  ██   ▒██  ██  ▒██▒  ▒██  ██▒     ██     ██▒  ▒█  
+# ██    ██   ██▒▒██   ██    ██  ██    ██  ██   ▒██  ██▒  ▒██     ██     ██       
+# ██    ██   ▓████▓   ██   ▒██  ██   ▒██  ██   ░██  ██    ██     ██     ███▒     
+# ████████    ████    ███████▒  ███████▒  ██    ██  ██    ██     ██     ▒█████▒  
+# ████████    ▒██▒    ██████▒   ██████▓   ██    ██  ██    ██     ██      ░█████▒ 
+# ██    ██     ██     ██        ██  ▓██░  ██   ░██  ██    ██     ██         ▒███ 
+# ██    ██     ██     ██        ██   ██▓  ██   ▒██  ██▒  ▒██     ██           ██ 
+# ██    ██     ██     ██        ██   ▒██  ██  ▒██▒  ▒██  ██▒     ██     █▒░  ▒██ 
+# ██    ██     ██     ██        ██    ██▒ ███████    ██████      ██     ███████▒ 
+# ██    ██     ██     ██        ██    ███ █████▒     ░████░      ██     ░█████▒  
+#                                                                                
+# ГНЗСЯФФКЗDМ4И
+#
 #+-+-+-+-+-+-+-+-+-+
 #|A|U|T|O|S|T|A|R|T|
 #+-+-+-+-+-+-+-+-+-+
@@ -23,23 +28,29 @@ exec-once = mako
 
 
 
-
-#+-+-+-+-+-+-+-+
-#|M|O|N|I|T|O|R|
-#+-+-+-+-+-+-+-+
-#monitor=,preferred,auto,auto
-monitor=DP-1,1920x1080@60,0x0,1
-
-
-+-+-+-+-+-+-+-+-+-+-+-+-+
-|W|I|N|D|O|W|-|R|U|L|E|S|
-+-+-+-+-+-+-+-+-+-+-+-+-+
-windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
+source = /home/$USER/.cache/wal/colors-hyprland.conf
 
 # Set programs that you use
 $terminal = foot
 $fileManager = thunar
 $browser = firefox
+
+$mainMod = SUPER
+$volume = ~/.scripts/volume.sh
+$backlight = ~/.scripts/brightness
+
+
+#+-+-+-+-+-+-+-+
+#|M|O|N|I|T|O|R|
+#+-+-+-+-+-+-+-+
+#monitor=,preferred,auto,1
+monitor=,1920x1080,auto,auto
++-+-+-+-+-+-+-+-+-+-+-+-+
+|W|I|N|D|O|W|-|R|U|L|E|S|
++-+-+-+-+-+-+-+-+-+-+-+-+
+windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
+
+
 
 +-+-+-+-+-+-+-+-+
 |E|N|V|-|V|A|R|S|
@@ -56,7 +67,6 @@ env = XDG_SESSION_DESKTOP,Hyprland
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 env = QT_QPA_PLATFORM,wayland;xcb
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
-
 +-+-+-+-+-+
 |I|N|P|U|T|
 +-+-+-+-+-+
@@ -91,11 +101,9 @@ general {
     gaps_in = 5
     gaps_out = 20
     border_size = 2
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
-
+    col.active_border = $color11 $color14 45deg
+    col.inactive_border = $background
     layout = dwindle
-
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
 }
@@ -119,7 +127,7 @@ decoration {
     drop_shadow = yes
     shadow_range = 4
     shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    col.shadow = $color11
 }
 
 
@@ -178,11 +186,6 @@ misc {
 +-+-+-+-+-+-+-+-+-+-+-+-+
 |K|E|Y|-|B|I|N|D|I|N|G|S|
 +-+-+-+-+-+-+-+-+-+-+-+-+
-#keybindings
-
-$mainMod = SUPER
-$volume = ~/.scripts/volume.sh
-$backlight = ~/.scripts/brightness
 
 bind = $mainMod, RETURN, exec, $terminal 
 bind = $mainMod, S, exec, $fileManager
