--- a/.config/tofi/config
+++ b/.config/tofi/config
@@ -11,8 +11,8 @@ num-results = 5
 prompt-text =󰣇 
 prompt-padding =15 
 background-color = 
-text-color= #DF95A5
-prompt-color= #AB6A88
-input-color= #D06C95
-selection-color= #BD8A74
-border-color=#DF95A5
+text-color= #EBC07C
+prompt-color= #CF9D71
+input-color= #DBB276
+selection-color= #AF8B6E
+border-color=#EBC07C
