--- a/.config/tofi/config
+++ b/.config/tofi/config
@@ -5,14 +5,13 @@ width = 20%
 height = 20%
 border-width = 2
 outline-width = 0
-padding = 20
-result-spacing = 5
+result-spacing = 6
 num-results = 5
 prompt-text =󰣇 
 prompt-padding =15 
-background-color = 
-text-color= #EBC07C
+background-color = #000a
+text-color= #AF8B6E
 prompt-color= #CF9D71
 input-color= #DBB276
-selection-color= #AF8B6E
+selection-color= #EBC07C
 border-color=#EBC07C
