--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -35,9 +35,13 @@ $terminal = foot
 $fileManager = thunar
 $browser = firefox
 
-$mainMod = SUPER
+#set scripts locations
 $volume = ~/.scripts/volume.sh
 $backlight = ~/.scripts/brightness
+$scrful = ~/.scripts/scrful.sh
+$scrpart = ~/.scripts/scrpart.sh
+$menu = ~/.scripts/tofi.sh
+$power = ~/.scripts/powermenu.sh
 
 
 #+-+-+-+-+-+-+-+
@@ -57,16 +61,23 @@ windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
 +-+-+-+-+-+-+-+-+
 # Some default env vars.
 env = XCURSOR_SIZE,11
-env = GDK_BACKEND=wayland
+env = XDG_CURRENT_DESKTOP,Hyprland 
+env = XDG_SESSION_TYPE,wayland 
+env = XDG_SESSION_DESKTOP,Hyprland 
+env = GDK_BACKEND,wayland
 env = QT_QPA_PLATFORM,wayland
-env = SDL_VIDEODRIVER,wayland
-env = CLUTTER_BACKEND,wayland
-env = XDG_CURRENT_DESKTOP,Hyprland
-env = XDG_SESSION_TYPE,wayland
-env = XDG_SESSION_DESKTOP,Hyprland
-env = QT_AUTO_SCREEN_SCALE_FACTOR,1
-env = QT_QPA_PLATFORM,wayland;xcb
+env = QT_QPA_PLATFORMTHEME,qt5ct #env = QT_STYLE_OVERRIDE,kvantum
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
+env = QT_AUTO_SCREEN_SCALE_FACTOR,1
+env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
+env = SDL_VIDEODRIVER,wayland 
+env = _JAVA_AWT_WM_NONREPARENTING,1
+env = WLR_NO_HARDWARE_CURSORS,1 
+env = MOZ_DISABLE_RDD_SANDBOX,1
+env = MOZ_ENABLE_WAYLAND,1 
+env = OZONE_PLATFORM,wayland
+
+
 +-+-+-+-+-+
 |I|N|P|U|T|
 +-+-+-+-+-+
@@ -186,12 +197,12 @@ misc {
 +-+-+-+-+-+-+-+-+-+-+-+-+
 |K|E|Y|-|B|I|N|D|I|N|G|S|
 +-+-+-+-+-+-+-+-+-+-+-+-+
-
+$mainMod = SUPER
 bind = $mainMod, RETURN, exec, $terminal 
 bind = $mainMod, S, exec, $fileManager
 bind = $mainMod, A, exec, $browser
-bind = $mainMod, SPACE, exec,~/.config/tofi/run.sh
-bind = $mainMod, ESCAPE,exec, ~/.config/tofi/powermenu.sh
+bind = $mainMod, SPACE, exec,$menu
+bind = $mainMod, ESCAPE,exec,$power
 bind = $mainMod, P, pseudo, # dwindle
 bind = SHIFT, F5, exec,~/.scripts/wal.sh
 bind = $mainMod, J, togglesplit, # dwindle
@@ -229,16 +240,7 @@ bind = $mainMod SHIFT, 7, movetoworkspace, 7
 bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
-
-# VOLUME
-bind = , xf86audioraisevolume, exec, $volume --inc #volume up
-bind = , xf86audiolowervolume, exec, $volume --dec #volume down
-bind = , xf86AudioMicMute, exec, $volume --toggle-mic #mute mic
-# BRIGHTNESS
-bind = , xf86MonBrightnessDown, exec, $backlight --dec #FN+F7
-bind = , xf86MonBrightnessUp, exec, $backlight --inc #FN+F8
-
-# Example special workspace (scratchpad)
+#special workspace (scratchpad)
 bind = $mainMod, Z, togglespecialworkspace, magic
 bind = $mainMod SHIFT, Z, movetoworkspace, special:magic
 
@@ -249,3 +251,16 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+
+# VOLUME
+bind = , xf86audioraisevolume, exec, $volume --inc #volume up
+bind = , xf86audiolowervolume, exec, $volume --dec #volume down
+bind = , xf86AudioMicMute, exec, $volume --toggle-mic #mute mic
+# BRIGHTNESS
+bind = , xf86MonBrightnessDown, exec, $backlight --dec #FN+F7
+bind = , xf86MonBrightnessUp, exec, $backlight --inc #FN+F8
+#SCREENSHOT
+bind = ,PRINT, exec, $scrful
+bind = ALT, PRINT, exec, $scrpart
+
