--- a/.config/tofi/config
+++ b/.config/tofi/config
@@ -10,8 +10,8 @@ num-results = 5
 prompt-text =󰣇 
 prompt-padding =15 
 background-color = #000a
-text-color= #AF8B6E
-prompt-color= #CF9D71
-input-color= #DBB276
-selection-color= #EBC07C
-border-color=#EBC07C
+text-color= #A73C2C
+prompt-color= #8A7970
+input-color= #94867C
+selection-color= #AE8A75
+border-color=#AE8A75
