--- a/.config/tofi/config
+++ b/.config/tofi/config
@@ -10,8 +10,8 @@ num-results = 5
 prompt-text =󰣇 
 prompt-padding =15 
 background-color = #000a
-text-color= #A73C2C
-prompt-color= #8A7970
-input-color= #94867C
-selection-color= #AE8A75
-border-color=#AE8A75
+text-color= #A14737
+prompt-color= #974E44
+input-color= #DD6948
+selection-color= #7BA275
+border-color=#7BA275
