--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -19,23 +19,28 @@
 #+-+-+-+-+-+-+-+-+-+
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # ENV FOR XDPH
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # ENV FOR XDPH
-exec-once = waybar # STARTS BAR
-exec-once = ~/.scripts/wal.sh # WALLPAPER
+exec-once = mako
 exec-once = wlsunset -S 9:00 -s 9:00 -t 5000 # NIGHT LIGHT ON
 exec-once = ~/.local/bin/xdg-desktop-portal-hyprland # KILLS ALL DESKTOP PORTAL AND START HYPRLAND DESKTOP PORTAL
 exec-once = wl-paste --watch cliphist store # CLIPBOARD 
-exec-once = mako
+exec-once = ~/.scripts/wal.sh # no need for starting up waybar seperatly
 
+#+-+-+-+-+-+-+-+
+#|S|O|U|R|C|E|S|
+#+-+-+-+-+-+-+-+
+source = /home/$USER/.cache/wal/colors-hyprland.conf #Provide bordor color gerneted by pywal 
 
-
-source = /home/$USER/.cache/wal/colors-hyprland.conf
-
-# Set programs that you use
+#+-+-+-+-+-+-+-+-+
+#|D|E|F|A|U|L|T|S|
+#+-+-+-+-+-+-+-+-+
+$layout = dwindle
 $terminal = foot
 $fileManager = thunar
 $browser = firefox
 
-#set scripts locations
+#+-+-+-+-+-+-+-+ +-+-+-+-+-+-+-+-+
+#|s|c|r|i|p|t|s| |l|o|c|a|t|i|o|n|
+#+-+-+-+-+-+-+-+ +-+-+-+-+-+-+-+-+
 $volume = ~/.scripts/volume.sh
 $backlight = ~/.scripts/brightness
 $scrful = ~/.scripts/scrful.sh
@@ -49,17 +54,17 @@ $power = ~/.scripts/powermenu.sh
 #+-+-+-+-+-+-+-+
 #monitor=,preferred,auto,1
 monitor=,1920x1080,auto,auto
+
 +-+-+-+-+-+-+-+-+-+-+-+-+
 |W|I|N|D|O|W|-|R|U|L|E|S|
 +-+-+-+-+-+-+-+-+-+-+-+-+
-windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
+windowrulev2 = animation slide,nomaximizerequest, class:.* # You'll probably like this.
 
 
 
 +-+-+-+-+-+-+-+-+
 |E|N|V|-|V|A|R|S|
 +-+-+-+-+-+-+-+-+
-# Some default env vars.
 env = XCURSOR_SIZE,11
 env = XDG_CURRENT_DESKTOP,Hyprland 
 env = XDG_SESSION_TYPE,wayland 
@@ -81,25 +86,17 @@ env = OZONE_PLATFORM,wayland
 +-+-+-+-+-+
 |I|N|P|U|T|
 +-+-+-+-+-+
-# For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = us
-    kb_variant =
-    kb_model =
-    kb_options =
-    kb_rules =
-
     follow_mouse = 1
-
     touchpad {
         natural_scroll = no
-    }
-
+             }
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-}
+      }
 device:epic-mouse-v1 {
     sensitivity = -0.5
-}
+                     }
 
 
 +-+-+-+-+-+-+-+
@@ -107,15 +104,12 @@ device:epic-mouse-v1 {
 +-+-+-+-+-+-+-+
 
 general {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-
     gaps_in = 5
-    gaps_out = 20
-    border_size = 2
-    col.active_border = $color11 $color14 45deg
+    gaps_out = 10
+    border_size = 3
+    col.active_border = $color11 $color14 45deg #See the wal/templates 
     col.inactive_border = $background
-    layout = dwindle
-    # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
+    layout = $layout
     allow_tearing = false
 }
 
@@ -125,16 +119,12 @@ general {
 +-+-+-+-+-+-+-+-+-+-+-+
 
 decoration {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-
     rounding = 3
-    
     blur {
         enabled = true
         size = 3
         passes = 1
     }
-
     drop_shadow = yes
     shadow_range = 4
     shadow_render_power = 3
@@ -152,7 +142,6 @@ animations {
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-
     animation = windows, 1, 7, myBezier
     animation = windowsOut, 1, 7, default, popin 80%
     animation = border, 1, 10, default
@@ -182,8 +171,10 @@ master {
 +-+-+-+-+-+-+-+-+
 gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = off
+    workspace_swipe = true
+    workspace_swipe_fingers = 3
 }
+
 +-+-+-+-+
 |M|I|S|C|
 +-+-+-+-+
@@ -240,6 +231,7 @@ bind = $mainMod SHIFT, 7, movetoworkspace, 7
 bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
+
 #special workspace (scratchpad)
 bind = $mainMod, Z, togglespecialworkspace, magic
 bind = $mainMod SHIFT, Z, movetoworkspace, special:magic
