--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -14,33 +14,55 @@
 #                                                                                
 # ГНЗСЯФФКЗDМ4И
 #
++-+-+-+-+-+-+-+-+
+|E|N|V|-|V|A|R|S|
++-+-+-+-+-+-+-+-+
+# Some default env vars.
+env = XCURSOR_SIZE,11
+# XDG
+env = XDG_CURRENT_DESKTOP,Hyprland
+env = XDG_SESSION_TYPE,wayland
+env = XDG_SESSION_DESKTOP,Hyprland
+
+# QT
+env = QT_AUTO_SCREEN_SCALE_FACTOR,1
+env = QT_QPA_PLATFORM=wayland;xcb    # Not yet working for onlyoffice-editor
+env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
+env = QT_QPA_PLATFORMTHEME,qt6ct
+
+# Toolkit
+env = SDL_VIDEODRIVER,wayland
+env = _JAVA_AWT_WM_NONEREPARENTING,1
+env = CLUTTER_BACKEND,wayland
+env = GDK_BACKEND,wayland,x11
+
+env = MOZ_ENABLE_WAYLAND,1 
+
+
+
+
 #+-+-+-+-+-+-+-+-+-+
 #|A|U|T|O|S|T|A|R|T|
 #+-+-+-+-+-+-+-+-+-+
-exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # ENV FOR XDPH
-exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # ENV FOR XDPH
-exec-once = mako
+# Responsible for imporitng environment variable for GTK applications
+exec-once = systemctl --user import-environment XDG_SESSION_TYPE XDG_CURRENT_DESKTOP
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = killall -q waybar;sleep .5 && waybar 
 exec-once = wlsunset -S 9:00 -s 9:00 -t 5000 # NIGHT LIGHT ON
 exec-once = ~/.local/bin/xdg-desktop-portal-hyprland # KILLS ALL DESKTOP PORTAL AND START HYPRLAND DESKTOP PORTAL
 exec-once = wl-paste --watch cliphist store # CLIPBOARD 
-exec-once = ~/.scripts/wal.sh # no need for starting up waybar seperatly
+exec-once = mako
+exec-once = ~/.scripts/wal.sh # WALLPAPER
 
-#+-+-+-+-+-+-+-+
-#|S|O|U|R|C|E|S|
-#+-+-+-+-+-+-+-+
-source = /home/$USER/.cache/wal/colors-hyprland.conf #Provide bordor color gerneted by pywal 
+source = /home/$USER/.cache/wal/colors-hyprland.conf
 
-#+-+-+-+-+-+-+-+-+
-#|D|E|F|A|U|L|T|S|
-#+-+-+-+-+-+-+-+-+
-$layout = dwindle
+# Set stuff  that you use
+$layout = master
 $terminal = foot
 $fileManager = thunar
 $browser = firefox
 
-#+-+-+-+-+-+-+-+ +-+-+-+-+-+-+-+-+
-#|s|c|r|i|p|t|s| |l|o|c|a|t|i|o|n|
-#+-+-+-+-+-+-+-+ +-+-+-+-+-+-+-+-+
+#set scripts locations
 $volume = ~/.scripts/volume.sh
 $backlight = ~/.scripts/brightness
 $scrful = ~/.scripts/scrful.sh
@@ -54,7 +76,6 @@ $power = ~/.scripts/powermenu.sh
 #+-+-+-+-+-+-+-+
 #monitor=,preferred,auto,1
 monitor=,1920x1080,auto,auto
-
 +-+-+-+-+-+-+-+-+-+-+-+-+
 |W|I|N|D|O|W|-|R|U|L|E|S|
 +-+-+-+-+-+-+-+-+-+-+-+-+
@@ -62,41 +83,25 @@ windowrulev2 = animation slide,nomaximizerequest, class:.* # You'll probably lik
 
 
 
-+-+-+-+-+-+-+-+-+
-|E|N|V|-|V|A|R|S|
-+-+-+-+-+-+-+-+-+
-env = XCURSOR_SIZE,11
-env = XDG_CURRENT_DESKTOP,Hyprland 
-env = XDG_SESSION_TYPE,wayland 
-env = XDG_SESSION_DESKTOP,Hyprland 
-env = GDK_BACKEND,wayland
-env = QT_QPA_PLATFORM,wayland
-env = QT_QPA_PLATFORMTHEME,qt5ct #env = QT_STYLE_OVERRIDE,kvantum
-env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
-env = QT_AUTO_SCREEN_SCALE_FACTOR,1
-env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
-env = SDL_VIDEODRIVER,wayland 
-env = _JAVA_AWT_WM_NONREPARENTING,1
-env = WLR_NO_HARDWARE_CURSORS,1 
-env = MOZ_DISABLE_RDD_SANDBOX,1
-env = MOZ_ENABLE_WAYLAND,1 
-env = OZONE_PLATFORM,wayland
 
 
 +-+-+-+-+-+
 |I|N|P|U|T|
 +-+-+-+-+-+
+# For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = us
     follow_mouse = 1
+
     touchpad {
         natural_scroll = no
-             }
+    }
+
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-      }
+}
 device:epic-mouse-v1 {
     sensitivity = -0.5
-                     }
+}
 
 
 +-+-+-+-+-+-+-+
@@ -104,12 +109,15 @@ device:epic-mouse-v1 {
 +-+-+-+-+-+-+-+
 
 general {
+    # See https://wiki.hyprland.org/Configuring/Variables/ for more
+
     gaps_in = 5
     gaps_out = 10
     border_size = 3
-    col.active_border = $color11 $color14 45deg #See the wal/templates 
+    col.active_border = $color11 $color14 45deg
     col.inactive_border = $background
     layout = $layout
+    # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
 }
 
@@ -119,12 +127,16 @@ general {
 +-+-+-+-+-+-+-+-+-+-+-+
 
 decoration {
+    # See https://wiki.hyprland.org/Configuring/Variables/ for more
+
     rounding = 3
+    
     blur {
         enabled = true
         size = 3
         passes = 1
     }
+
     drop_shadow = yes
     shadow_range = 4
     shadow_render_power = 3
@@ -174,7 +186,6 @@ gestures {
     workspace_swipe = true
     workspace_swipe_fingers = 3
 }
-
 +-+-+-+-+
 |M|I|S|C|
 +-+-+-+-+
