--- a/.config/mako/config
+++ b/.config/mako/config
@@ -28,25 +28,25 @@ max-visible=5
 layer=overlay
 anchor=bottom-right
 
-background-color=#021014
-text-color=#335545
+background-color=#0c0d0c
+text-color=#945D33
 
 [urgency=low]
-border-color=#335545
-background-color=#021014
-text-color=#335545
+border-color=#945D33
+background-color=#0c0d0c
+text-color=#945D33
 
 [urgency=normal]
-border-color=#335545
-background-color=#021014
-text-color=#335545
+border-color=#945D33
+background-color=#0c0d0c
+text-color=#945D33
 default-timeout=10000
 ignore-timeout=1
 
 [urgency=high]
 font=Sauce Code Pro 16
-border-color=#335545
-background-color=#021014
-text-color=#335545
+border-color=#945D33
+background-color=#0c0d0c
+text-color=#945D33
 default-timeout=0
 ignore-timeout=1
