--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -99,7 +99,7 @@
         "custom/power": {
                     "tooltip": false,
                     "format": "",
-                    "on-click": "exec ~/.config/tofi/powermenu.sh"
+                    "on-click": "exec ~/.scripts/powermenu.sh"
         },
     },
 ]
