--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -57,13 +57,13 @@ exec-once = ~/.scripts/wal.sh # WALLPAPER
 source = /home/$USER/.cache/wal/colors-hyprland.conf
 
 # Set stuff  that you use
-$layout = master
+$layout = dwindle #dwindle/master
 $terminal = foot
 $fileManager = thunar
 $browser = firefox
 
 #set scripts locations
-$volume = ~/.scripts/volume.sh
+$volume = ~/vol.sh
 $backlight = ~/.scripts/brightness
 $scrful = ~/.scripts/scrful.sh
 $scrpart = ~/.scripts/scrpart.sh
@@ -110,13 +110,12 @@ device:epic-mouse-v1 {
 
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-
+	layout = $layout
     gaps_in = 5
     gaps_out = 10
     border_size = 3
     col.active_border = $color11 $color14 45deg
     col.inactive_border = $background
-    layout = $layout
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
 }
@@ -130,18 +129,16 @@ decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     rounding = 3
-    
     blur {
         enabled = true
         size = 3
         passes = 1
-    }
-
+        }
     drop_shadow = yes
     shadow_range = 4
     shadow_render_power = 3
     col.shadow = $color11
-}
+  }
 
 
 +-+-+-+-+-+-+-+-+-+-+
@@ -257,9 +254,15 @@ bindm = $mainMod, mouse:273, resizewindow
 
 
 # VOLUME
-bind = , xf86audioraisevolume, exec, $volume --inc #volume up
-bind = , xf86audiolowervolume, exec, $volume --dec #volume down
-bind = , xf86AudioMicMute, exec, $volume --toggle-mic #mute mic
+bind = , xf86audioraisevolume, exec, $volume inc #volume up
+bind = , xf86audiolowervolume, exec, $volume dec #volume down
+bind=, XF86AudioMute, exec, $volume mute #mute
+bind=, XF86AudioPlay, exec, playerctl play-pause
+bind=, XF86AudioPause, exec, playerctl play-pause
+bind=, XF86AudioNext, exec, playerctl next
+bind=, XF86AudioPrev, exec, playerctl previous
+
+
 # BRIGHTNESS
 bind = , xf86MonBrightnessDown, exec, $backlight --dec #FN+F7
 bind = , xf86MonBrightnessUp, exec, $backlight --inc #FN+F8
