--- a/.config/tofi/config
+++ b/.config/tofi/config
@@ -12,8 +12,8 @@ num-results = 2
 prompt-text =󰣇 
 prompt-padding =15 
 background-color = #000a
-text-color= #923A48
-prompt-color= #BB4F53
-input-color= #178C75
-selection-color= #FF8C70
-border-color=#FF8C70
+text-color= #366975
+prompt-color= #467377
+input-color= #3F7480
+selection-color= #477A83
+border-color=#477A83
