--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,22 +1,22 @@
                                                                                 
-# ██    ██ ███    ███ ██████▒   ██████▒   █████▒     ░████░   ████████   ▒████▒  
-# ██    ██ ░██▒  ▒██░ ███████▒  ███████▓  ███████    ██████   ████████  ▒██████  
-# ██    ██  ███  ███  ██   ▒██  ██   ▒██  ██  ▒██▒  ▒██  ██▒     ██     ██▒  ▒█  
-# ██    ██   ██▒▒██   ██    ██  ██    ██  ██   ▒██  ██▒  ▒██     ██     ██       
-# ██    ██   ▓████▓   ██   ▒██  ██   ▒██  ██   ░██  ██    ██     ██     ███▒     
-# ████████    ████    ███████▒  ███████▒  ██    ██  ██    ██     ██     ▒█████▒  
-# ████████    ▒██▒    ██████▒   ██████▓   ██    ██  ██    ██     ██      ░█████▒ 
-# ██    ██     ██     ██        ██  ▓██░  ██   ░██  ██    ██     ██         ▒███ 
-# ██    ██     ██     ██        ██   ██▓  ██   ▒██  ██▒  ▒██     ██           ██ 
-# ██    ██     ██     ██        ██   ▒██  ██  ▒██▒  ▒██  ██▒     ██     █▒░  ▒██ 
-# ██    ██     ██     ██        ██    ██▒ ███████    ██████      ██     ███████▒ 
-# ██    ██     ██     ██        ██    ███ █████▒     ░████░      ██     ░█████▒  
+#  ██    ██ ███    ███ ██████▒   ██████▒   █████▒     ░████░   ████████   ▒████▒  
+#  ██    ██ ░██▒  ▒██░ ███████▒  ███████▓  ███████    ██████   ████████  ▒██████  
+#  ██    ██  ███  ███  ██   ▒██  ██   ▒██  ██  ▒██▒  ▒██  ██▒     ██     ██▒  ▒█  
+#  ██    ██   ██▒▒██   ██    ██  ██    ██  ██   ▒██  ██▒  ▒██     ██     ██       
+#  ██    ██   ▓████▓   ██   ▒██  ██   ▒██  ██   ░██  ██    ██     ██     ███▒     
+#  ████████    ████    ███████▒  ███████▒  ██    ██  ██    ██     ██     ▒█████▒  
+#  ████████    ▒██▒    ██████▒   ██████▓   ██    ██  ██    ██     ██      ░█████▒ 
+#  ██    ██     ██     ██        ██  ▓██░  ██   ░██  ██    ██     ██         ▒███ 
+#  ██    ██     ██     ██        ██   ██▓  ██   ▒██  ██▒  ▒██     ██           ██ 
+#  ██    ██     ██     ██        ██   ▒██  ██  ▒██▒  ▒██  ██▒     ██     █▒░  ▒██ 
+#  ██    ██     ██     ██        ██    ██▒ ███████    ██████      ██     ███████▒ 
+#  ██    ██     ██     ██        ██    ███ █████▒     ░████░      ██     ░█████▒  
 #                                                                                
-# ГНЗСЯФФКЗDМ4И
+#  ГНЗСЯФФКЗDМ4И
 #
-+-+-+-+-+-+-+-+-+
-|E|N|V|-|V|A|R|S|
-+-+-+-+-+-+-+-+-+
+# +-+-+-+-+-+-+-+-+
+# |E|N|V|-|V|A|R|S|
+# +-+-+-+-+-+-+-+-+
 # Some default env vars.
 env = XCURSOR_SIZE,11
 # XDG
@@ -41,9 +41,9 @@ env = MOZ_ENABLE_WAYLAND,1
 
 
 
-#+-+-+-+-+-+-+-+-+-+
-#|A|U|T|O|S|T|A|R|T|
-#+-+-+-+-+-+-+-+-+-+
+# +-+-+-+-+-+-+-+-+-+
+# |A|U|T|O|S|T|A|R|T|
+# +-+-+-+-+-+-+-+-+-+
 # Responsible for imporitng environment variable for GTK applications
 exec-once = systemctl --user import-environment XDG_SESSION_TYPE XDG_CURRENT_DESKTOP
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
@@ -63,7 +63,7 @@ $fileManager = thunar
 $browser = firefox
 
 #set scripts locations
-$volume = ~/vol.sh
+$volume = ~/.scripts/vol.sh
 $backlight = ~/.scripts/brightness
 $scrful = ~/.scripts/scrful.sh
 $scrpart = ~/.scripts/scrpart.sh
@@ -71,23 +71,23 @@ $menu = ~/.scripts/tofi.sh
 $power = ~/.scripts/powermenu.sh
 
 
-#+-+-+-+-+-+-+-+
-#|M|O|N|I|T|O|R|
-#+-+-+-+-+-+-+-+
+# +-+-+-+-+-+-+-+
+# |M|O|N|I|T|O|R|
+# +-+-+-+-+-+-+-+
 #monitor=,preferred,auto,1
 monitor=,1920x1080,auto,auto
-+-+-+-+-+-+-+-+-+-+-+-+-+
-|W|I|N|D|O|W|-|R|U|L|E|S|
-+-+-+-+-+-+-+-+-+-+-+-+-+
+# +-+-+-+-+-+-+-+-+-+-+-+-+
+# |W|I|N|D|O|W|-|R|U|L|E|S|
+# +-+-+-+-+-+-+-+-+-+-+-+-+
 windowrulev2 = animation slide,nomaximizerequest, class:.* # You'll probably like this.
 
 
 
 
 
-+-+-+-+-+-+
-|I|N|P|U|T|
-+-+-+-+-+-+
+# +-+-+-+-+-+
+# |I|N|P|U|T|
+# +-+-+-+-+-+
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = us
@@ -99,20 +99,21 @@ input {
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
-device:epic-mouse-v1 {
+device{
+    name=epic-mouse-v1 
     sensitivity = -0.5
 }
 
 
-+-+-+-+-+-+-+-+
-|G|E|N|E|R|A|L|
-+-+-+-+-+-+-+-+
+# +-+-+-+-+-+-+-+
+# |G|E|N|E|R|A|L|
+# +-+-+-+-+-+-+-+
 
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 	layout = $layout
-    gaps_in = 5
-    gaps_out = 10
+    gaps_in = 2
+    gaps_out = 5
     border_size = 3
     col.active_border = $color11 $color14 45deg
     col.inactive_border = $background
@@ -121,9 +122,9 @@ general {
 }
 
 
-+-+-+-+-+-+-+-+-+-+-+-+
-|D|E|C|O|R|A|T|I|O|N|S|
-+-+-+-+-+-+-+-+-+-+-+-+
+# +-+-+-+-+-+-+-+-+-+-+-+
+# |D|E|C|O|R|A|T|I|O|N|S|
+# +-+-+-+-+-+-+-+-+-+-+-+
 
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
@@ -141,9 +142,9 @@ decoration {
   }
 
 
-+-+-+-+-+-+-+-+-+-+-+
-|A|N|I|M|A|T|I|O|N|S|
-+-+-+-+-+-+-+-+-+-+-+
+# +-+-+-+-+-+-+-+-+-+-+
+# |A|N|I|M|A|T|I|O|N|S|
+# +-+-+-+-+-+-+-+-+-+-+
 
 animations {
     enabled = yes
@@ -159,9 +160,9 @@ animations {
     animation = workspaces, 1, 6, default
 }
 
-+-+-+-+-+-+-+-+
-|L|A|Y|O|U|T|S|
-+-+-+-+-+-+-+-+
+# +-+-+-+-+-+-+-+
+# |L|A|Y|O|U|T|S|
+# +-+-+-+-+-+-+-+
 
 dwindle {
     # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
@@ -175,17 +176,17 @@ master {
 }
 
 
-+-+-+-+-+-+-+-+-+
-|G|E|S|T|U|R|E|S|
-+-+-+-+-+-+-+-+-+
+# +-+-+-+-+-+-+-+-+
+# |G|E|S|T|U|R|E|S|
+# +-+-+-+-+-+-+-+-+
 gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     workspace_swipe = true
     workspace_swipe_fingers = 3
 }
-+-+-+-+-+
-|M|I|S|C|
-+-+-+-+-+
+# +-+-+-+-+
+# |M|I|S|C|
+# +-+-+-+-+
 misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     force_default_wallpaper = 0 # Set to 0 to disable the anime mascot wallpapers
@@ -193,9 +194,9 @@ misc {
 
 
 
-+-+-+-+-+-+-+-+-+-+-+-+-+
-|K|E|Y|-|B|I|N|D|I|N|G|S|
-+-+-+-+-+-+-+-+-+-+-+-+-+
+# +-+-+-+-+-+-+-+-+-+-+-+-+
+# |K|E|Y|-|B|I|N|D|I|N|G|S|
+# +-+-+-+-+-+-+-+-+-+-+-+-+
 $mainMod = SUPER
 bind = $mainMod, RETURN, exec, $terminal 
 bind = $mainMod, S, exec, $fileManager
