--- a/.config/tofi/config
+++ b/.config/tofi/config
@@ -12,8 +12,8 @@ num-results = 2
 prompt-text =󰣇 
 prompt-padding =15 
 background-color = #000a
-text-color= #366975
-prompt-color= #467377
-input-color= #3F7480
-selection-color= #477A83
-border-color=#477A83
+text-color= #AF8B6E
+prompt-color= #CF9D71
+input-color= #DBB276
+selection-color= #EBC07C
+border-color=#EBC07C
