--- a/.config/tofi/config
+++ b/.config/tofi/config
@@ -12,8 +12,8 @@ num-results = 2
 prompt-text =󰣇 
 prompt-padding =15 
 background-color = #000a
-text-color= #AF8B6E
-prompt-color= #CF9D71
-input-color= #DBB276
-selection-color= #EBC07C
-border-color=#EBC07C
+text-color= #93725D
+prompt-color= #958B72
+input-color= #CCA16D
+selection-color= #748380
+border-color=#748380
