--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -53,6 +53,7 @@ exec-once = ~/.local/bin/xdg-desktop-portal-hyprland # KILLS ALL DESKTOP PORTAL 
 exec-once = wl-paste --watch cliphist store # CLIPBOARD 
 exec-once = mako
 exec-once = ~/.scripts/wal.sh # WALLPAPER
+exec-once = nm-applet --indicator
 
 source = /home/$USER/.cache/wal/colors-hyprland.conf
 
@@ -101,7 +102,7 @@ input {
 }
 device{
     name=epic-mouse-v1 
-    sensitivity = -0.5
+    sensitivity = 1
 }
 
 
@@ -172,7 +173,7 @@ dwindle {
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
+   # new_is_master = true
 }
 
 
@@ -252,6 +253,7 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+bindm = , mouse:274, movewindow
 
 
 # VOLUME
