--- a/.config/tofi/config
+++ b/.config/tofi/config
@@ -12,8 +12,8 @@ num-results = 2
 prompt-text =󰣇 
 prompt-padding =15 
 background-color = #000a
-text-color= #93725D
-prompt-color= #958B72
-input-color= #CCA16D
-selection-color= #748380
-border-color=#748380
+text-color= #A14737
+prompt-color= #974E44
+input-color= #DD6948
+selection-color= #7BA275
+border-color=#7BA275
