--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -129,19 +129,19 @@ general {
 
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-
-    rounding = 3
-    blur {
-        enabled = true
-        size = 3
-        passes = 1
-        }
-    drop_shadow = yes
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = $color11
-  }
-
+ blur {
+		 enabled = true
+		 size = 3
+         passes = 1
+  	 }
+shadow{
+range = 3
+enabled = true
+range = 4
+render_power = 3
+color = $color11
+ }
+}
 
 # +-+-+-+-+-+-+-+-+-+-+
 # |A|N|I|M|A|T|I|O|N|S|
